# quicksomething

./: ProjectHome.md  QuickAccess_TODO.md  QuickStarter_TODO.md
quickaccess/: CHANGELOG  CMakeLists.txt  README  dirmodel.h  itemview.cpp  itemview.h  label.cpp  popupdialog.cpp  popupdialog.h  quickaccess.cpp  quickaccess.h  settings.cpp  settings.h
quickstarter/: TODO  applicationmodel.cpp  applicationmodel.h  itemview.cpp  itemview.h  plasma-applet-quickstarter.desktop  popupdialog.cpp  popupdialog.h  quickstarter.cpp  quickstarter.h  quickstarterConfig.ui  resizedialog.cpp  settings.cpp
sharedclasses/dialog/: resizedialog.cpp
sharedclasses/itemview/: animator.cpp  animator.h  animator_p.h  fadeanimator.cpp  flipanimator.cpp  flipanimator.h  itemviewbase.cpp  itemviewbase.h
trunk/quickaccess/: CMakeLists.txt  customstyle.cpp  customstyle.h  dirmodel.cpp  itemview.cpp  itemview.h  label.h  plasma-applet-quickaccess.desktop  popupdialog.cpp  popupdialog.h  quickaccess.cpp  quickaccessConfig.ui  settings.cpp
trunk/quickstarter/: CMakeLists.txt  applicationmodel.cpp  applicationmodel.h  itemview.cpp  popupdialog.cpp  popupdialog.h  quickstarter.cpp  quickstarterConfig.ui  resizedialog.h  settings.cpp  settings.h
trunk/sharedclasses/itemview/: animator.cpp  animator.h  fadeanimator.h  itemviewbase.cpp  itemviewbase.h
wiki/: QuickAccess_TODO.wiki  QuickStarter_TODO.wiki
